Fixed Minor Layout Bug
Fixed Padding for catergories section on homepage while viewing on
smartphones. Added extra 5px padding.

--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ Banner
 }
 .padleft-right{
     padding-left: 5px;
-    padding-right: 0px;
+    padding-right: 5px;
 }
 .big-text{
     font-size: 35px;
